--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,12 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.3.0'
 
+    //retrofit implementation **************************************
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    // **************************************************************
+
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
